--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProgramSuiteDb;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "THIS_IS_A_DEVELOPMENT_SECRET_CHANGE_ME",
+    "Issuer": "ProgramSuite",
+    "Audience": "ProgramSuiteClients",
+    "ExpiryMinutes": 180
+  }
 }
